--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -4,11 +4,31 @@
   box-sizing: border-box;
 }
 .App{
-  background-color: azure;
+  background-color: rgb(255, 255, 255);
 }
 
 
 .App_Container{
   height: 100vh;
   
+}
+.center{
+  display: block;
+  text-align: -webkit-center;
+}
+.right{
+  display: block;
+  text-align: -webkit-right;
+}
+.text-align-center{
+  text-align: center;
+}
+.main-title{
+  font-size: 4em;
+  font-weight: 700;
+  color: #0a1f4c;
+}
+.separator{
+  margin-bottom: 90px;
+  clear: both;
 }
