--- a/Frontend/src/components/utils/Footer/Footer.css
+++ b/Frontend/src/components/utils/Footer/Footer.css
@@ -7,6 +7,8 @@ footer{
     background-color: #111111;
     padding: 20px;
     margin-top: 30px;
+    position: relative;
+    bottom: 0px;
 }
 .footer-container{
     display: flex;
