--- a/Frontend/src/components/Pages/Home/Home.css
+++ b/Frontend/src/components/Pages/Home/Home.css
@@ -63,7 +63,7 @@
     float: right;
     width: 310px;
     padding-top: 41px;
-    margin-right: 44px;
+    margin-right: 217px;
     font-size: 1.2em;
 }
 .white__container {
@@ -73,6 +73,7 @@
     font-size: 2.9em;
     font-weight: 700;
     color: #0a1f4c;
+    margin-right: 11%;
 }
 .white__arrow > .arrow {
     font-size: 100px;
@@ -87,6 +88,6 @@
 
 .about__iamge{
     position:absolute;
-    left: 80px;
+    left: 220px;
     top: 15px;
 }
