--- a/Frontend/src/components/utils/Footer/Footer.css
+++ b/Frontend/src/components/utils/Footer/Footer.css
@@ -5,7 +5,7 @@ footer{
     height: 171px;
     width:100%;
     background-color: #111111;
-    padding: 20px;
+    padding-top: 20px;
     margin-top: 30px;
     position: relative;
     bottom: 0px;
@@ -31,4 +31,9 @@ footer{
 }
 .footer-bottom{
     opacity: 0.5;
+    padding: 5px;
+    background-color: #000006;
+    width: 100%;
+    text-align: center;
+    height: 35px;
 }
