--- a/Frontend/src/components/Pages/Home/Home.css
+++ b/Frontend/src/components/Pages/Home/Home.css
@@ -48,8 +48,9 @@
 /*  ---------------------- about section --------------------- */
 
 .about {
-    height: 500px;
+    height: 600px;
     position:relative;
+    
 }
 .white {
     height: 60%;
@@ -90,11 +91,64 @@
     position:absolute;
     left: 10px;
     top: -4px;
+
+}
+
+.about2{
+    display: inline-block;
+    background: linear-gradient( white 60%, #0c2f50 0);
+    width: 100%;
+    height: 600px;
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+}
+.about2__container{
+    max-width: 1200px;
+    display: flex;
+    color: black;
+}
+.about2__right{
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+.about2__white{
+    flex: 0.6;
+    display: flex;
+    padding-top: 140px;
+    padding-left: 36px;
+}
+.white2__arrow > .arrow {
+    color: #0c2f50;
+    font-size: 100px;
+    transform: translate(-22px, 18.6px);
+}
+.white2__line{
+    border-bottom: 3px solid #0c2f50;
+}
+.white2__text{
+    font-size: 2.6em;
+    font-weight: 700;
+    color: #0a1f4c;
+    text-align: left;
+}
+.about2__blue{
+    flex: 0.4;
+    display: flex;
+    text-align: left;
+    color: white;
+    font-size: 1.1em;
+}
+.blue2__text{
+    max-width: 280px;
+    width: 100%;
+    margin-left: auto;
 }
 
 /* -----------------services section--------------------------- */
 .services{
-    background-color: #09989e;
+    background-color: #02979d;
     padding-top: 35px;
     padding-bottom: 40px;
 }
@@ -133,6 +187,7 @@
 .service_no{
     padding: 15px;
     color: rgb(92, 92, 92);
+    font-size: 3em;
 }
 .service__title{
     color: white;
