--- a/Frontend/src/components/utils/nav/Nav.css
+++ b/Frontend/src/components/utils/nav/Nav.css
@@ -1,3 +1,28 @@
 .navbar-brand{
     padding-left:20px !important;
+
+}
+button.btn.btn-primary{
+    margin-right: 10px;
+}
+div#exampleModal {
+    transform: translate(0%, 29%);
+}
+h5#exampleModalLabel {
+    margin-left: 175px;
+}
+.modal-body {
+    display: flex;
+}
+.DrSec {
+    margin-left: 44px;
+}
+.PatientSec {
+    margin-left: 125px;
+}
+div#exampleModal1 {
+    transform: translate(0%, 29%);
+}
+h5#exampleModalLabel1 {
+    margin-left: 175px;
 }
