--- a/Frontend/src/components/Pages/Doctors/Doctors.css
+++ b/Frontend/src/components/Pages/Doctors/Doctors.css
@@ -7,7 +7,12 @@ h1{
     text-align: center;
 }
 .doc_details{
-    height: 100vh;
+    height: 100%;
     background-color: #f7f8f5;
     margin: 0px 100px;
+}
+.doctor_details{
+    float:left;
+    padding:20px;
+
 }
